Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12846

could not delete orphan [0x2001ac5ff:0x3a30:0x0]: rc = -2

XMLWordPrintable

    • 2
    • 9223372036854775807

      We are seeing repeated messages

       Oct 10 10:47:20 nbp7-mds1 kernel: [775744.827611] LustreError: 88338:0:(mdd_orphans.c:329:mdd_orphan_destroy()) nbp7-MDD0000: could not delete orphan [0x2001ac5ff:0x3a30:0x0]: rc = -2
      Oct 10 10:57:20 nbp7-mds1 kernel: [776344.863994] LustreError: 88338:0:(mdd_orphans.c:329:mdd_orphan_destroy()) nbp7-MDD0000: could not delete orphan [0x2001ac5ff:0x3a30:0x0]: rc = -2
      Oct 10 11:07:20 nbp7-mds1 kernel: [776944.904176] LustreError: 88338:0:(mdd_orphans.c:329:mdd_orphan_destroy()) nbp7-MDD0000: could not delete orphan [0x2001ac5ff:0x3a30:0x0]: rc = -2
      Oct 10 11:17:20 nbp7-mds1 kernel: [777544.939854] LustreError: 88338:0:(mdd_orphans.c:329:mdd_orphan_destroy()) nbp7-MDD0000: could not delete orphan [0x2001ac5ff:0x3a30:0x0]: rc = -2
      

      We are running 2.12.2 with
      LU-11418 mdd: delete name if orphan doesn't exist

            ys Yang Sheng
            mhanafi Mahmoud Hanafi
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: