LU-12846 mdd: return error while delete failed

Return error code in mdd_orphan_destroy while dt_delete
failed. Else will cause a dead loop.

Fixes: e1ace3751f (LU-8514 mdd: transaction failure should be checked)
Signed-off-by: Yang Sheng <ys@whamcloud.com>
Change-Id: I6fc3e992333ffa61900074309223555264cfe66b

Resolved Conflicts:
	lustre/mdd/mdd_orphans.c
	lustre/tests/sanity.sh