lustre/tests/sanity.sh
@@ -20693,7 +20693,7 @@ test_810() {
 }
 run_test 810 "partial page writes on ZFS (LU-11663)"
 
-test_811() {
+test_811a() {
 	[ $(lustre_version_code $SINGLEMDS) -lt $(version_code 2.11.56) ] &&
 		skip "Need MDS version at least 2.11.56"
 
@@ -20708,7 +20708,26 @@ test_811() {
 	[[ $(do_facet mds1 pgrep orph_.*-MDD | wc -l) -eq 0 ]] ||
 		error "MDD orphan cleanup thread not quit"
 }
-run_test 811 "orphan name stub can be cleaned up in startup"
+run_test 811a "orphan name stub can be cleaned up in startup"
+
+test_811b() {
+	[ $(lustre_version_code $SINGLEMDS) -lt $(version_code 2.13.00) ] &&
+		skip "Need MDS version at least 2.13.00"
+	[ $PARALLEL == "yes" ] && skip "skip parallel run"
+
+	#define OBD_FAIL_MDS_ORPHAN_DELETE	0x165
+	do_facet mds1 $LCTL set_param fail_loc=0x165
+	$MULTIOP $DIR/$tfile Ouc || error "multiop failed"
+
+	stop mds1
+	#define OBD_FAIL_MDS_ORPHAN_CLEANUP	0x167
+	do_facet mds1 $LCTL set_param fail_loc=0x167
+	start mds1 $(mdsdevname 1) $MDS_MOUNT_OPTS || error "mds1 start fail"
+
+	wait_update_facet mds1 "pgrep orph_.*-MDD | wc -l" "0" ||
+		error "MDD orphan cleanup thread not quit"
+}
+run_test 811b "orphan cleanup thread shouldn't be blocked even delete failed"
 
 test_812() {
 	[ $OST1_VERSION -lt $(version_code 2.12.51) ] &&
